// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should match snapshot 1`] = `
<div>
  <button
    class="c-button c-button--primary"
    data-testid="c-button"
    type="button"
  >
    Hello World
  </button>
</div>
`;

exports[`<Button /> should render a large class when c-button--large is set as a prop size prop 1`] = `
<div>
  <button
    class="c-button c-button--primary c-button--large"
    data-testid="c-button"
    type="button"
  >
    Hello World
  </button>
</div>
`;

exports[`<Button /> should render a outline class when c-button--outline is set as a prop variant prop 1`] = `
<div>
  <button
    class="c-button c-button--outline"
    data-testid="c-button"
    type="button"
  >
    Hello World
  </button>
</div>
`;

exports[`<Button /> should render a plain class when c-button--plain is set as a prop variant prop 1`] = `
<div>
  <button
    class="c-button c-button--plain"
    data-testid="c-button"
    type="button"
  >
    Hello World
  </button>
</div>
`;

exports[`<Button /> should render a primary class when c-button--primary is set as a prop variant prop 1`] = `
<div>
  <button
    class="c-button c-button--primary"
    data-testid="c-button"
    type="button"
  >
    Hello World
  </button>
</div>
`;

exports[`<Button /> should render a secondary class when c-button--secondary is set as a prop variant prop 1`] = `
<div>
  <button
    class="c-button c-button--secondary"
    data-testid="c-button"
    type="button"
  >
    Hello World
  </button>
</div>
`;

exports[`<Button /> should render a slim class when c-button--slim is set as a prop size prop 1`] = `
<div>
  <button
    class="c-button c-button--primary c-button--slim"
    data-testid="c-button"
    type="button"
  >
    Hello World
  </button>
</div>
`;

exports[`<Button /> should render a small class when c-button--small is set as a prop size prop 1`] = `
<div>
  <button
    class="c-button c-button--primary c-button--small"
    data-testid="c-button"
    type="button"
  >
    Hello World
  </button>
</div>
`;

exports[`<Button /> should render the wide class when disabled prop is added 1`] = `
<div>
  <button
    class="c-button c-button--primary c-button--disabled"
    data-testid="c-button"
    disabled=""
    type="button"
  >
    Hello World
  </button>
</div>
`;

exports[`<Button /> should render the wide class when wide prop is added 1`] = `
<div>
  <button
    class="c-button c-button--primary c-button--wide"
    data-testid="c-button"
    type="button"
  >
    Hello World
  </button>
</div>
`;
